<resources>
    <string name="app_name">PetSearch</string>
    <string name="fetch_data">Fetching Popular movie</string>
    <string name="movie_detail">Fetching movie details</string>
    <string name="title_text">The Lion King</string>
    <string name="rate_text">7.2</string>
    <string name="lang_text">EN</string>
    <string name="date_text">21st April 2019</string>
    <string name="something_wrong">Something went wrong..!!</string>
    <string name="duration">120 minutes</string>
    <string name="budget_text">Budget</string>
    <string name="revenue_text">Revenue</string>
    <string name="check_internet">Check internet connection</string>
    <string name="popular_movies">Popular movies</string>
    <string name="search">Search</string>
    <string name="placement">Placement</string>
</resources>
