<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailsActivity">

    <ImageView
        android:id="@+id/banner_poster"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:elevation="@dimen/four_dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:fontFamily="sans-serif"
        android:padding="@dimen/eight_dp"
        android:text="@string/title_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/fourteen_sp"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_poster" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:fontFamily="sans-serif"
        android:paddingStart="@dimen/eight_dp"
        android:paddingLeft="@dimen/eight_dp"
        android:text="@string/duration"
        android:textSize="@dimen/eighteen_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:fontFamily="sans-serif"
        android:text="@string/date_text"
        android:textSize="@dimen/eighteen_sp"
        app:layout_constraintStart_toEndOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@+id/overview" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:background="@drawable/circular_green_back"
        android:fontFamily="sans-serif"
        android:maxLines="3"
        android:paddingStart="@dimen/sixteen_dp"
        android:paddingEnd="@dimen/sixteen_dp"
        android:text="@string/rate_text"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteen_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview" />

    <TextView
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:background="@drawable/circular_red_back"
        android:fontFamily="sans-serif"
        android:maxLines="3"
        android:paddingStart="@dimen/sixteen_dp"
        android:paddingEnd="@dimen/sixteen_dp"
        android:text="@string/lang_text"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteen_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration" />

    <TextView
        android:id="@+id/genres"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:fontFamily="sans-serif"
        android:paddingStart="@dimen/eight_dp"
        android:paddingLeft="@dimen/eight_dp"
        android:text="@string/duration"
        android:textSize="@dimen/eighteen_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration"
        app:layout_constraintEnd_toStartOf="@+id/lang"/>

    <FrameLayout
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twelve_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/twelve_dp"
        android:background="@drawable/circular_background"
        android:elevation="@dimen/two_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/budget_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:layout_marginBottom="@dimen/eight_dp"
                android:fontFamily="sans-serif"
                android:text="@string/budget_text"
                android:textColor="@color/text_color"
                android:textSize="@dimen/twenty_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/revenue_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/revenue_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/eight_dp"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:layout_marginBottom="@dimen/sixteen_dp"
                android:fontFamily="sans-serif"
                android:text="@string/revenue_text"
                android:textColor="@color/text_color"
                android:textSize="@dimen/twenty_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/budget_tv" />

            <TextView
                android:id="@+id/budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/eight_dp"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:layout_marginBottom="@dimen/eight_dp"
                android:fontFamily="sans-serif"
                android:text="@string/budget_text"
                android:textColor="@color/text_color"
                android:textSize="@dimen/twenty_sp"
                app:layout_constraintBottom_toTopOf="@+id/revenue_tv"
                app:layout_constraintStart_toEndOf="@+id/revenue_tv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/eight_dp"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:layout_marginBottom="@dimen/eight_dp"
                android:fontFamily="sans-serif"
                android:text="@string/revenue_text"
                android:textColor="@color/text_color"
                android:textSize="@dimen/twenty_sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/revenue_tv"
                app:layout_constraintTop_toBottomOf="@+id/budget_tv" />
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>