<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/eight_dp"
    android:layout_marginTop="@dimen/eight_dp"
    android:layout_marginEnd="@dimen/eight_dp"
    android:background="@drawable/circular_background"
    android:elevation="@dimen/four_dp"
    android:paddingBottom="@dimen/eight_dp">

    <ImageView
        android:id="@+id/poster_iv"
        android:layout_width="@dimen/one_twenty_eight_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:fontFamily="sans-serif"
        android:padding="@dimen/four_dp"
        android:text="@string/title_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/poster_iv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_desc"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:fontFamily="sans-serif"
        android:maxLines="3"
        android:padding="@dimen/four_dp"
        android:text="@string/title_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintBottom_toTopOf="@+id/rating"
        app:layout_constraintEnd_toStartOf="@+id/more_iv"
        app:layout_constraintStart_toEndOf="@+id/poster_iv"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <ImageView
        android:id="@+id/more_iv"
        android:layout_width="@dimen/thirty_six_dp"
        android:layout_height="@dimen/thirty_six_dp"
        android:layout_margin="@dimen/eight_dp"
        android:src="@drawable/ic_arrow_right_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:background="@drawable/circular_green_back"
        android:fontFamily="sans-serif"
        android:maxLines="3"
        android:paddingStart="@dimen/twelve_dp"
        android:paddingEnd="@dimen/twelve_dp"
        android:text="@string/rate_text"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteen_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/poster_iv" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:fontFamily="sans-serif"
        android:maxLines="3"
        android:paddingStart="@dimen/sixteen_dp"
        android:paddingEnd="@dimen/sixteen_dp"
        android:text="@string/date_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lang"
        app:layout_constraintStart_toEndOf="@+id/rating" />

    <TextView
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:background="@drawable/circular_red_back"
        android:fontFamily="sans-serif"
        android:maxLines="3"
        android:paddingStart="@dimen/twelve_dp"
        android:paddingEnd="@dimen/twelve_dp"
        android:text="@string/lang_text"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
